samples/_failures_safe/1761506370_c27a88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d835585.c: In function ‘main’:
./samples/SAFE/__tmp_5d835585.c:139:61: error: expected ‘]’ at end of input
  139 |             printf("%02X ", compressed_list.chunks[i].data[j
      |                                                             ^
      |                                                             ]
./samples/SAFE/__tmp_5d835585.c:139:13: error: expected declaration or statement at end of input
  139 |             printf("%02X ", compressed_list.chunks[i].data[j
      |             ^~~~~~
./samples/SAFE/__tmp_5d835585.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d835585.c:139:13: error: expected declaration or statement at end of input
